<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="shortcut_add_expense"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_expense"
        android:shortcutShortLabel="@string/shortcut_add_expense_short"
        android:shortcutLongLabel="@string/shortcut_add_expense_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.vinaynalavade.expensetracker"
            android:targetClass="com.vinaynalavade.expensetracker.MainActivity">
            <extra
                android:name="extra_start_route"
                android:value="add_expense" />
        </intent>
    </shortcut>

    <shortcut
        android:shortcutId="shortcut_add_income"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_income"
        android:shortcutShortLabel="@string/shortcut_add_income_short"
        android:shortcutLongLabel="@string/shortcut_add_income_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.vinaynalavade.expensetracker"
            android:targetClass="com.vinaynalavade.expensetracker.MainActivity">
            <extra
                android:name="extra_start_route"
                android:value="add_income" />
        </intent>
    </shortcut>

    <shortcut
        android:shortcutId="shortcut_view_transactions"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_transactions"
        android:shortcutShortLabel="@string/shortcut_view_transactions_short"
        android:shortcutLongLabel="@string/shortcut_view_transactions_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.vinaynalavade.expensetracker"
            android:targetClass="com.vinaynalavade.expensetracker.MainActivity">
            <extra
                android:name="extra_start_route"
                android:value="transactions" />
        </intent>
    </shortcut>
</shortcuts>
